--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <a-entity
           position="0 0 0"
           scale="0.03 0.03 0.03"
-          gltf-model="/terreno_new_7.glb"
+          gltf-model="/Terreno_nuovo_1.glb"
         ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
